objects/Case.object
<CustomObject>
    <fields>
        <fullName>Points_of_Sale__c</fullName>
        <label>Points of Sale</label>
        <picklist>
            <picklistValues>
                <fullName>1-Expedia United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Expedia United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Expedia Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Expedia Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-Expedia Voyages-sncf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-Expedia Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-Expedia Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Expedia Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-Expedia Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14-Expedia Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-Expedia Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-Expedia South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17-Expedia Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-Expedia France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-Expedia Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-Hotwire.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27-Expedia India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28-Expedia Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29-Expedia New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-Expedia Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>63-Expedia Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64-Expedia Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-Expedia Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-Expedia Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>67-Expedia Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>69-Expedia Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-Expedia Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30001-WWTE United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30003-WWTE Alaska Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30004-WWTE United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excursions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ForceMajeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SwimmingPool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GeneralAccommodation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank from GSO Org</description>
        <label>Rank</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Missed_SLA__c</fullName>
        <description>Reasons why SLA was missed.  Dependent upon a &quot;No&quot; answer from the &quot;Met SLA&quot; field</description>
        <label>Reason Missed SLA</label>
        <picklist>
            <controllingField>Met_SLA__c</controllingField>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed / No Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Images / VT Not Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Audit Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS Chasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H&amp;S Stop Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issues Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM Stop Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strat Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Running_Time_With_Support__c</fullName>
        <description>Time in hours that the Case has been with Support</description>
        <formula>IF( ISPICKVAL(Status, &apos;In Progress&apos;),
Time_With_Support__c, 
Time_With_Support__c +  ((NOW() - Last_Status_Change__c )*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running Time With Support</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Due_Date_ECD__c</fullName>
        <label>SLA Due Date (ECD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_booking_date_end__c</fullName>
        <label>Search booking date end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_booking_date_start__c</fullName>
        <label>Search booking date start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Category__c</fullName>
        <label>Secondary Category</label>
        <picklist>
            <controllingField>Primary_Category__c</controllingField>
            <picklistValues>
                <fullName>General Poor Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken glass in and around the pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Drowning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No depth markings (or worn away)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstructions in the water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slips/Trips/Falls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suction/Entrapment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclean / cloudy pool water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeeps and car hire unsafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough seating on coaches for guests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seat belt issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive gaps over 100mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall from a balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts of balcony missing/disintegrating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 1 metre in height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cots broken or unsafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defective play equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highchairs broken or unsafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of supervision from Children’s Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric shocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loose or exposed wiring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Model__c</fullName>
        <label>Selling Model</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Auto_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if autoresponse should be sent so we can use auto response rules along with email blacklisting logic in apex. Will be set in Apex.</description>
        <label>Send Auto Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement__c</fullName>
        <label>Service Level Agreement</label>
        <referenceTo>Service_Level_Agreement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stack_Rank__c</fullName>
        <label>Stack Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_reason__c</fullName>
        <label>Sub-reason</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Activate new user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add / modify dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add / modify templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black list request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop / bounce-back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing account / contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify / delete report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuperRegion__c</fullName>
        <formula>Account.Super_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SuperRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region_Lookup__c</fullName>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <description>Task Category from GSO Org</description>
        <label>Task Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Identifies team case is assinged to</description>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Air CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fulfillment Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Debit Memos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destination services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade Product Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade Rollout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade TSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EID/VID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fare Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Partner Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Systems Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hothelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TempOwnerId__c</fullName>
        <label>TempOwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translated_Description__c</fullName>
        <description>This will hold the google translated version of the description if the description field contains text that is not in the native language of the person working the case</description>
        <label>Translated Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Translation_Confidence__c</fullName>
        <label>Translation Confidence</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>ACPR_Reply</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_CPR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Reply: Customer Email</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air CPR</value>
        </filters>
        <label>ACPR Reply</label>
        <sharedTo>
            <groups>Air CPR</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADM_Workflow_Update</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND (2 OR 5) AND 6</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Stack_Rank__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.ADM</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>ADM</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Reply</value>
        </filters>
        <filters>
            <field>Case_Category__c</field>
            <operation>equals</operation>
            <value>Training/Workflow Updates</value>
        </filters>
        <label>ADM Workflow Update List</label>
        <sharedTo>
            <groups>ADM</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Admin_View_Record_Type</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Age_In_Business_Hours__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>Admin View - Record Type</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Time__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_HSTS_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Team__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Super_Region_Lookup__c</columns>
        <columns>Language__c</columns>
        <columns>Chain__c</columns>
        <columns>Brand_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Hotel_Systems_Technical_Support</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>notEqual</operation>
            <value>Ecom NewTrade Rollout,Ecom NewTrade Product Creation</value>
        </filters>
        <label>All HSTS Cases</label>
        <sharedTo>
            <groups>HSTS DC Help</groups>
            <groups>HSTS Ecom NewTrade Product Creation</groups>
            <groups>HSTS Ecom NewTrade Rollout</groups>
            <groups>HSTS Ecom NewTrade TSE</groups>
            <groups>HSTS Hothelp</groups>
            <groups>HSTS NYC Tech</groups>
            <groups>HSTS Non-English</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Ticketing_Cases</fullName>
        <booleanFilter>(1 OR (2 AND 3))</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Ticketing</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Ticketing</value>
        </filters>
        <label>All Ticketing Cases</label>
        <sharedTo>
            <groups>Ticketing</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Transport</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>Case_Category__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Ticketing,Case.Settlement_Reporting,Case.Schedule_Change</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_Fulfillment_Process_Support,Case.Air_CPR,Case.ADM,Case.CarOps,Case.Commissions,Case.Fare_Filing</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <label>All Transport</label>
        <sharedTo>
            <groups>ADM</groups>
            <groups>Air CPR</groups>
            <groups>Air Fulfillment Process &amp; Support</groups>
            <groups>CarOps</groups>
            <groups>Commissions</groups>
            <groups>Schedule Change</groups>
            <groups>Settlement &amp; Reporting</groups>
            <groups>Ticketing</groups>
            <groups>Ticketing &amp; Schedule Change</groups>
        </sharedTo>
    </listViews>
</CustomObject>